--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
            margin-left: auto;
            margin-right: auto;">
             <source src="super idol.mp4">
-        </video>
+        </video> <br>
+        <img src="images.png" style="margin-left: 36%;">
+        <img src="channels4_profile.jpg" style="width: 10%; height: 20%; margin-left: 45%;">
+        <a href="https://www.youtube.com/channel/UC3GP3CSrdxBeeORFyCuAx_Q" style="color: aqua; display: block; margin-left: 43%">tudzgamer</a>
     </body>
-    </body>
+    
 </html>
