--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
            margin-right: auto;">
             <source src="super idol.mp4">
         </video> <br>
+        <div>
         <img src="images.png" style="margin-left: 36%;">
-        <img src="channels4_profile.jpg" style="width: 10%; height: 20%; margin-left: 45%;">
-        <a href="https://www.youtube.com/channel/UC3GP3CSrdxBeeORFyCuAx_Q" style="color: aqua; display: block; margin-left: 43%">tudzgamer</a>
+        <a href="https://www.youtube.com/channel/UC3GP3CSrdxBeeORFyCuAx_Q" style="color: aqua; display: block ;margin-left: 43%">tudzgamer</a>
+        </div>
     </body>
-    
 </html>
