--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <source src="super idol.mp4">
         </video> <br>
         <div>
-        <img src="images.png" style="margin-left: 36%;">
-        <a href="https://www.youtube.com/channel/UC3GP3CSrdxBeeORFyCuAx_Q" style="color: aqua; display: block ;margin-left: 43%">tudzgamer</a>
+        <img src="images.png">
+        <a href="https://www.youtube.com/channel/UC3GP3CSrdxBeeORFyCuAx_Q">tudzgamer</a>
         </div>
     </body>
 </html>
