--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <script data-ad-client="ca-pub-3482953821096703" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <title>web của tú</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
